# ef_ws

./: .bashrc  .gitignore  CLI_basics.md  README.md  links.md  sdk_overview.md
g1/: REQUIREMENTS.txt
g1/scripts/: README.md  g1_hl_gait_measure.py  g1_hl_motion_sequence.py
g1/scripts/arm_motion/: README.md  sdk_details.md
g1/scripts/arm_motion/pbd/motion_databse/: boxing_1.csv  boxing_2.csv  boxing_3.csv  pick_red_box.csv
g1/scripts/arm_motion/pbd/safety/: FAQ.txt
g1/scripts/arm_motion/safety/: FAQ.txt
g1/scripts/audio/: record_wav.py
g1/scripts/basic/: FAQ.txt  commands.txt  g1_hl_motion_sequence.py  g1_loco_client_example.py
g1/scripts/basic/audio/: greeting.py  record_wav.py  text_to_wav.py
g1/scripts/basic/headlight_client/: headlight.py
g1/scripts/basic/safety/: FAQ.txt
g1/scripts/dev/: built_in_slam_feature.md  dash_robot_control.py  ef_client.py  sdk_details.md  sdk_details_ef_client.md
g1/scripts/dev/VLA/stack_1/: README.md  engine.py  vision_module.py  (+1 more)
g1/scripts/dev/other/: basic_loco.py
g1/scripts/hl_arm_motion/: high_five.py  pbd_reproduce.py  wave.py
g1/scripts/hl_arm_motion/safety/: FAQ.txt
g1/scripts/huddle/: huddle.py  huddle_step1.json  huddle_step2.json
g1/scripts/low_level/: arm_motion.py  wave.json  wave.py
g1/scripts/navigation/obstacle_avoidance/: FAQ.txt  create_map.py  create_slam_map.py  navigate.py  path_planner.py  real_time_path_steps.py  slam_all.py  slam_service.py
g1/scripts/navigation/slam/: env_vars.txt  live_slam.py  livox2_python.py  logs.txt  mid360_config.json  run_geoff_gui.py  run_geoff_gui_input.py  test.py  view_slam_data.py
g1/scripts/obj_detection/: FAQ.txt  berxel_rgbd_test (1).py  sdk_details.md  soda_can_detect.py
g1/scripts/obj_detection/from_laptop/: clip_soda_can_detect 1 (1).py  soda_can_detect.py 1.py  soda_can_detect.py.py
g1/scripts/obstacle_avoidance/: FAQ.txt  create_slam_map.py  locomotion.py  map_viewer.py  obstacle_detection.py  slam_map.py
g1/scripts/obstacle_parcour/: pattern_1.py
g1/scripts/other/: basic_loco.py  codex_prompts.txt  ef_client.py  stack.txt
g1/scripts/other/safety/: usb_controller.py
g1/scripts/pbd/: pbd_demonstrate.py  right_hook_punch.csv  right_hook_punch.npz
g1/scripts/pick_and_place/: FAQ.txt  g1_pick_place_hardcoded.py  pnp.json
g1/scripts/safety/: keyboard_controller.py
g1/scripts/sensors/: FAQ.txt  g1_stability_view.py  lidar_points.py  rgbd_cam.py
g1/scripts/sensors/manual_streaming/: CMakeLists.txt  image_server.py  sdk_details.md  tx_lidar_main.cpp
g1/scripts/to_run_on_g1/: lidar_config.json
g1/scripts/troubleshooting/: FAQ.txt  command.txt  g1_poll_all.py  g1_topics.example.yaml
g1/scripts/unsorted/: command.txt  g1_webapp.py  live_slam.py  live_slam_safe.py  livox_python.py  run_geoff_stack.py
g1/scripts/unsorted/imes-g1/src/ros/g1_interface/: CMakeLists.txt  package.xml
g1/scripts/unsorted/imes-g1/src/ros/g1_interface/srv/: G1Modes.srv
g1/scripts/unsorted/imes-g1/src/ros/g1_moveit_29dof/: CMakeLists.txt
g1/scripts/unsorted/imes-g1/src/ros/g1_moveit_29dof/config/: g1_29.srdf  initial_positions.yaml  joint_limits.yaml  ompl_planning.yaml  ros2_controllers.yaml
g1/scripts/unsorted/imes-g1/src/ros/g1_moveit_29dof/launch/: move_group.launch.py  moveit_fake.launch.py
g1/scripts/unsorted/imes-g1/src/ros/g1_obstacle_avoidance/: CMakeLists.txt  package.xml
g1/scripts/unsorted/imes-g1/src/ros/g1_obstacle_avoidance/launch/: obstacle_avoidance.launch.py
g1/scripts/unsorted/imes-g1/src/ros/g1_obstacle_avoidance/src/: obstacle_avoidance.cpp
g1/scripts/unsorted/imes-g1/src/ros/g1_platform/: CMakeLists.txt  package.xml
g1/scripts/unsorted/imes-g1/src/ros/g1_platform/config/: g1_domain_bridge.yaml  g1_platform.yaml
g1/scripts/unsorted/imes-g1/src/ros/g1_platform/g1_platform/: g1_statepublisher
g1/scripts/unsorted/imes-g1/src/ros/g1_platform/include/g1_arm_control_hardware/: g1_arm7_unitree.h  visibility_control.h
g1/scripts/unsorted/imes-g1/src/ros/g1_platform/install/: local_setup.sh  setup.sh
g1/scripts/unsorted/imes-g1/src/ros/g1_platform/install/g1_platform/share/g1_platform/: package.bash  package.zsh
g1/scripts/unsorted/imes-g1/src/ros/g1_platform/launch/: led.launch.py
g1/scripts/unsorted/imes-g1/src/ros/g1_platform/src/: g1_arm7_ros2_control.cpp  g1_audio_service.cpp  g1_highroscontrol.cpp  g1_led_service.cpp  g1_video_stream.cpp
g1/scripts/unsorted/imes-g1/src/ros/g1_platform/src/arm_hardware/: g1_arm7_hw.cpp  g1_arm7_unitree.cpp
g1/sim/: unitree_mujoco.py
g1/sim/mujoco/: config.py
g1/sim/mujoco/COM_viz/: MUJOCO_LOG.TXT  config.py  csv_motion_viewer.py  hip_bow_pickup.py  run_band_lowering.py  run_com_viz.py  scene.xml
g1/sim/unitree_robots/g1/: g1_29dof.xml
g1/unitree_robots/g1/: g1_29dof_with_hand_rev_1_0.xml
go2/maps/: gctcujtcu.pgm  test.pgm  test.yaml  test2.pgm  tgfetzs.pgm  tgfetzs.yaml
go2/scripts/: go2_stand_gait_down.py  go2_stand_gait_down_ik.py  go2_stand_low_example.py  go2_step_sequence.py  go2_step_sequence_with_imu.py  hip_height_webui.py  hl_walk_task.py  webapp.py
go2/sim/mujoco/: config.py  unitree_sdk2py_bridge.py
go2/sim/mujoco/scripts/: go2_stand_height.py
sandbox/: day_1.md  day_1_final.md  day_2.md  day_2_final.md  day_3.md  day_3_final.md  day_4.md  day_4_final.md  todo.txt
sandbox/go2/: g1_webapp.py  go2_sport_client.py  go2_stand_example.py  go2_step_sequence_with_imu_sim.py  go2_web_ui.py  hl_walk_wave_task.py  reset_robot.py  slam_webapp.py
sandbox/go2/docs/: basic_motion_control.txt  basic_services.txt  lowlevel_ctrl_framework.txt  motion_services_v2.txt  odometer_service.txt
sandbox/go2/maps/: gctcujtcu.yaml  test2.yaml
sim/: config.py  unitree_mujoco.py
sim/scripts/: go2_move_sequence.py  go2_stand_example.py
unsorted/: day_1_final.md  day_2_final.md  day_3_final.md  day_4_final.md
unsorted/inhalt/: TODO.md  app.py  day_1_final.md  day_2_final.md  day_3_final.md  day_4_final.md  notes.md  requirements.txt  sections.txt
unsorted/presentations/: day_1.tex  day_2.tex  day_3.tex  day_4.tex  template.tex
unsorted/presentations/imgs/: _urls.txt
(+377 files in other folders)
